--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
