--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
+    "nodemailer": "^7.0.12",
     "validator": "^13.15.26"
   },
   "devDependencies": {
